fix(ui): Same `z-index` as dropdowns for dialogs

--- a/packages/ui/src/components/Dialog/Dialog.css
+++ b/packages/ui/src/components/Dialog/Dialog.css
@@ -28,7 +28,7 @@
 	left: 0;
 	width: 100vw;
 	height: 100vh;
-	z-index: 50;
+	z-index: 100;
 	display: flex;
 	justify-content: center;
 	align-items: center;
